--- a/style.css
+++ b/style.css
@@ -31,11 +31,17 @@ button{
     margin-top: 1rem;
 }
 .btns button{
-    border-radius: 50%;
+    border-radius: 2rem;
     width: 2rem; height:2rem;
     margin:0 0.5rem;
     background-color: #ccc;
+    transition: 0.5s;
 }
 .btns button.on{
     background-color: red;
+    width: 3rem;
+}
+.btns button.on:after{
+    content : "OK";
+    color:white;
 }
